# zellij-vertical-tabs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  lefthook.yml  renovate.json  sonar-project.properties
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  osv-scanner.yml  quality-gates.yml  scorecard.yml  sonar.yml
.specify/memory/: constitution.md
docs/: design-principles.md
examples/: left.kdl  rescue-marks.sh  right.kdl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: render_core.rs
src/: lib.rs  main.rs  plugin.rs
